<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_jobs"
        android:icon="@drawable/ic_suitcase_active"
        android:title="@string/jobs" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_mail"
        android:title="@string/messages" />

    <item
        android:id="@+id/navigation_my_projects"
        android:icon="@drawable/ic_file"
        android:title="@string/my_projects" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_bell"
        android:title="@string/notifications" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />

</menu>
