<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/introduceYourSelfEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/primary_color_radius_border"
            android:gravity="start"
            android:hint="@string/introduce_yourself"
            android:minLines="10"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e8e8e8" />

    <LinearLayout
        android:id="@+id/attachFileLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/attach_files"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/optional"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <ImageButton
            android:id="@+id/attachFileButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/plus" />
    </LinearLayout>

</LinearLayout>