<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/deleteConversationBackButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="20dp"
        android:background="@drawable/custom_ripple_transparent_color_bg"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_close" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:src="@drawable/dele" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:gravity="center"
        android:text="@string/sure_to_delete_message"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/deleteConversationButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_ripple_primary_radius_bg"
        android:gravity="center"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/doNotDeleteConversationButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_ripple_border_radius_red"
        android:gravity="center"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="#fc3d3d"
        android:textSize="18sp" />
</LinearLayout>