<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:hint="@string/search_by_word"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/outline_text_box"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonJobs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_start_states"
            android:checked="true"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="35dp"
            android:text="@string/jobs"
            android:textColor="@drawable/radio_text"
            android:textSize="15sp"
            app:buttonTint="@android:color/transparent" />

        <RadioButton
            android:id="@+id/radioButtonWishList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_end_states"
            android:gravity="center"
            android:paddingStart="0dp"
            android:paddingEnd="35dp"
            android:text="@string/wish_list"
            android:textColor="@drawable/radio_text"
            android:textSize="15sp"
            app:buttonTint="@android:color/transparent" />
    </RadioGroup>

    <fragment
        android:id="@+id/fragment"
        android:name="com.tt.handsomeman.ui.jobs.JobsChildFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:label="@string/messages"
        tools:layout="@layout/fragment_job_child" />
</LinearLayout>