<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/deleteConversationBackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_ripple_transparent_color_radius_bg"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_close" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        app:cardCornerRadius="14dp">

        <ImageView
            android:id="@+id/imageViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewDeleteDialogDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="35dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/design_6sp"
        tools:text="@string/sure_to_delete_message" />

    <Button
        android:id="@+id/doNotDeleteConversationButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_ripple_primary_radius_bg"
        android:gravity="center"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/design_6sp" />

    <Button
        android:id="@+id/deleteConversationButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_ripple_border_radius_red"
        android:gravity="center"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/orange_red"
        android:textSize="@dimen/design_6sp" />
</LinearLayout>